# career-coordination-mcp

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  vcpkg.json
apps/ccmcp_cli/: CMakeLists.txt  main.cpp
apps/ccmcp_cli/commands/: decision.cpp  decision.h  decision_logic.cpp  decision_logic.h  index_build.cpp  index_build.h  index_build_logic.cpp  index_build_logic.h  ingest_resume.cpp  ingest_resume.h  ingest_resume_logic.cpp  ingest_resume_logic.h  match.cpp  match.h  match_logic.cpp  match_logic.h  redis_health.cpp  redis_health.h  tokenize_resume.cpp  tokenize_resume.h  tokenize_resume_logic.cpp  tokenize_resume_logic.h
apps/mcp_server/: CMakeLists.txt  config.cpp  config.h  main.cpp  mcp_protocol.cpp  mcp_protocol.h  method_handlers.cpp  method_handlers.h  server_context.h  server_loop.cpp  server_loop.h  startup_guard.cpp  startup_guard.h
apps/mcp_server/handlers/: get_audit_trace.cpp  get_audit_trace.h  get_decision.cpp  get_decision.h  index_build.cpp  index_build.h  ingest_resume.cpp  ingest_resume.h  interaction_apply_event.cpp  interaction_apply_event.h  match_opportunity.cpp  match_opportunity.h  tool_registry.cpp  tool_registry.h  validate_match_report.cpp  validate_match_report.h
apps/shared/: arg_parser.h
cmake/toolchains/: vcpkg.cmake
docker/triplets/: x64-linux-static-release.cmake
docs/: AGENTBOARDROOM_PATTERNS.md  ARCHITECTURE.md  CONSTITUTIONAL_RULES.md  CONSTITUTIONAL_VALIDATION_ENGINE.md  DECISION_RECORDS.md  DEPLOYMENT.md  DEVELOPMENT.md  DOMAIN_MODEL.md  EMBEDDINGS.md  IMPLEMENTATION_PLAN.md  INDEXING.md  LINTING.md  MCP_PROTOCOL.md  MCP_SERVER.md  RESUME_INGESTION.md  TESTING_STRATEGY.md  TOKEN_IR.md  V0_1_READINESS_REPORT.md  V0_2_ARCHITECTURE.md  V0_2_READINESS_REPORT.md  V0_2_SLICE_5_REFACTOR.md  V0_3_READINESS_REPORT.md  VECTORDB_BACKEND.md  prompt.md
include/ccmcp/app/: app_service.h
include/ccmcp/constitution/: artifact_view.h  constitution.h  constitutional_rule.h  finding.h  match_report_view.h  override_request.h  rule.h  token_ir_artifact_view.h  validation_engine.h  validation_report.h
include/ccmcp/core/: clock.h  hashing.h  id_generator.h  ids.h  normalization.h  result.h  services.h  sha256.h  time.h  types.h  version.h
include/ccmcp/domain/: contact.h  decision_record.h  experience_atom.h  interaction.h  match_report.h  opportunity.h  requirement.h  resume.h  resume_token_ir.h  resume_token_ir_json.h  runtime_config_snapshot.h
include/ccmcp/embedding/: embedding_provider.h
include/ccmcp/indexing/: index_build_pipeline.h  index_run.h  index_run_store.h
include/ccmcp/ingest/: format_adapter.h  hygiene.h  ingest_result.h  ingested_resume.h  resume_ingestor.h  resume_meta.h  resume_store.h
include/ccmcp/interaction/: inmemory_interaction_coordinator.h  interaction_coordinator.h  redis_config.h  redis_health.h  redis_interaction_coordinator.h
include/ccmcp/matching/: matcher.h  presets.h  scorer.h
include/ccmcp/storage/: audit_chain.h  audit_event.h  audit_log.h  decision_store.h  inmemory_atom_repository.h  inmemory_interaction_repository.h  inmemory_opportunity_repository.h  repositories.h  runtime_snapshot_store.h
include/ccmcp/tokenization/: deterministic_lexical_tokenizer.h  resume_token_store.h  stub_inference_tokenizer.h  tokenization_provider.h
include/ccmcp/vector/: embedding_index.h  inmemory_embedding_index.h  lancedb_embedding_index.h  null_embedding_index.h  sqlite_embedding_index.h  vector_backend.h
resources/sqlite/: schema_v1.sql
scripts/: build.sh  docker-entrypoint.sh  format.sh  install-hooks.sh  lint.sh
src/app/: app_service.cpp
src/constitution/: override_request.cpp  token_ir_artifact_view.cpp  validation_engine.cpp
src/constitution/rules/: evid_001.cpp  tok_001.cpp  (+6 more)
src/core/: clock.cpp  hashing.cpp  id_generator.cpp  sha256.cpp
src/domain/: contact.cpp  decision_record.cpp  experience_atom.cpp  interaction.cpp  match_report.cpp  opportunity.cpp  requirement.cpp  resume.cpp  resume_token_ir.cpp  resume_token_ir_json.cpp  runtime_config_snapshot.cpp
src/embedding/: deterministic_stub_embedding_provider.cpp
src/indexing/: index_build_pipeline.cpp  index_run.cpp
src/ingest/: format_adapter.cpp  hygiene.cpp  resume_ingestor.cpp
src/interaction/: inmemory_interaction_coordinator.cpp  redis_config.cpp  redis_health.cpp  redis_interaction_coordinator.cpp
src/matching/: matcher.cpp
src/storage/: audit_chain.cpp  audit_log.cpp  decision_store.cpp  inmemory_atom_repository.cpp  inmemory_interaction_repository.cpp  inmemory_opportunity_repository.cpp
src/tokenization/: deterministic_lexical_tokenizer.cpp  stub_inference_tokenizer.cpp
src/vector/: inmemory_embedding_index.cpp  lancedb_embedding_index.cpp  null_embedding_index.cpp  sqlite_embedding_index.cpp
tests/: CMakeLists.txt  test_app_interaction_pipeline.cpp  test_app_match_pipeline.cpp  test_app_service_index_build_pipeline.cpp  test_app_service_ingest_pipeline.cpp  test_audit_chain.cpp  test_audit_chain_startup.cpp  test_decision_record.cpp  test_domain_schema.cpp  test_format_adapter.cpp  test_hygiene.cpp  test_ids.cpp  test_index_build_pipeline.cpp  test_inmemory_atom_repository.cpp  test_inmemory_embedding_index.cpp  test_inmemory_interaction_coordinator.cpp  test_inmemory_interaction_repository.cpp  test_inmemory_opportunity_repository.cpp  test_interaction_ordering.cpp  test_matcher_basic_overlap.cpp  test_matcher_determinism.cpp  test_matcher_hybrid_determinism.cpp  test_matcher_hybrid_retrieval.cpp  test_matcher_missing.cpp  test_matcher_tie_break.cpp  test_matching_stub.cpp  test_null_embedding_index.cpp  test_override_rail.cpp  test_redis_config.cpp  test_redis_interaction_coordinator.cpp  test_resume_ingestor.cpp  test_runtime_config_snapshot.cpp  test_sqlite_atom_repository.cpp  test_sqlite_audit_log.cpp  test_sqlite_decision_store.cpp  test_sqlite_embedding_index.cpp  test_sqlite_index_run_store.cpp  test_sqlite_opportunity_repository.cpp  test_sqlite_resume_store.cpp  test_sqlite_resume_token_store.cpp  (+9 more)
(+28 files in other folders)
